<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mayikh STYLE</string>
    <string name="btn_sesion">Inicia Sesión</string>
    <string name="btn_register">Registrate</string>
    <string name="btn_register2">Siguiente</string>
    <string name="btn_categoria">Ver Categorías</string>
    <string name="btn_mensage">Mensaje</string>
    <string name="btn_carrito">Carrito</string>
    <string name="btn_perfil">Perfil</string>
    <string name="btn_ofert">Oferta especial y Promociones</string>
    <string name="btn_home">Inicio</string>
    <string name="btn_Edit">Editar Perfil</string>
    <string name="btn_Atras">Atrás</string>
    <string name="btn_Agregar">Agregar al Carrito</string>
    <string name="btn_Comprar">Compra Ahora</string>
    <string name="btn_Pagar">Pagar Ahora</string>
    <string name="btn_Suma">Aumentar cantidad</string>
    <string name="btn_Resta">Disminuir cantidad</string>
    <string name="btn_VerTodo">Ver Todo</string>
    <string name="btn_description">Descripción</string>
    <string name="btn_update">Actualizar</string>
    <string name="btn_AddNewdireccion">Agregar Nueva Dirección</string>
    <string name="btn_AddDireccion">Agregar Dirección</string>
    <string name="btn_AddNewTargeta">Agregar Nueva Tarjeta</string>
    <string name="btn_AddDTargeta">Agregar Tarjeta</string>
    <string name="btn_SaveTargeta">Guardar Tarjeta</string>
    <string name="btn_Activos">Estado del Pedido</string>
    <string name="btn_Completado">Historial de Pedido</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="btn_Aceptar">Aceptar</string>
    <string name="btn_StateActivo">Pagado</string>
    <string name="btn_StateComplete">Completado</string>
    <string name="btn_StateCancel">Cancelado</string>
    <string name="btn_CancelarPedido">Cancelar Pedido</string>
    <string name="btn_PedidoEntregado">Pedido Entregado</string>
    <string name="btn_PedirPedido">Pedir de Nuevo</string>
    <string name="btn_Enviar">Enviar</string>

    <string name="title_register">Registrate</string>
    <string name="title_admin">Agregar Producto - ADMIN</string>
    <string name="title_login">Inicia Sesión</string>
    <string name="title_home">Entrega a</string>
    <string name="title_home2">Oferta Especial</string>
    <string name="title_home3">Recomendaciones para tí</string>
    <string name="title_home4">Categorías destacadas</string>
    <string name="title_carrito">Mi carrito</string>
    <string name="title_category">Categorias</string>
    <string name="title_product">Productos</string>
    <string name="title_direccion">Dirección</string>
    <string name="title_direccionEdit">Editar Dirección</string>
    <string name="title_metodoPago">Método de Pago</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="title_cerrarsesión">Cerrar Sesión</string>
    <string name="title_Ordenar">Ordenar mi Pedido</string>
    <string name="title_Pedido">Código de Pedido N° 1</string>
    <string name="title_Oferta">Ofertas especiales</string>
    <string name="title_DetallePedidoActivo">Detalle Pedido - Activos</string>
    <string name="title_DetallePedidoCompletado">Detalle Pedido - Completado</string>
    <string name="title_Cancelarpedido">Cancelar Pedido</string>

    <string name="carritoVacio">No tienes productos seleccionados en tu carrito.</string>
    <string name="actvivosVacio">No tienes pedidos activos en este momento.</string>
    <string name="completadosVacio">No has realizado pedidos en este momento.</string>
    <string name="direccionVacio">No tienes direcciones guardadas en este momento.</string>
    <string name="metodopagoVacio">No tienes tarjetas guardadas en este momento.</string>

    <string name="Opcion1">Esperando por mucho tiempo</string>
    <string name="Opcion2">No se puede contactar al delivery</string>
    <string name="Opcion3">Conductor negado a ir a destino</string>
    <string name="Opcion4">Dirección incorrecta mostrada</string>
    <string name="Opcion5">El precio no es razonable</string>
    <string name="Opcion6">Quiero pedir otro restaurante</string>
    <string name="Opcion7">Solo quiero cancelar</string>
    <string name="Opcion8">Escribe otra razón...</string>

    <string name="input_phone">Número de Teléfono (+51)</string>
    <string name="input_email">Correo Electrónico:</string>
    <string name="input_name">Nombre y Apellido</string>
    <string name="input_nameProduct">Nombre del Producto</string>
    <string name="input_descriptionProduct">Descripción del Producto</string>
    <string name="input_priceProduct">Precio del Producto</string>
    <string name="input_urlProduct">Imagen del Producto (URL)</string>
    <string name="input_cantidad"></string>
    <string name="input_NameD">Nombre de la Ubicación</string>
    <string name="input_Distrito">Distrito</string>
    <string name="input_Direccion">Dirección</string>
    <string name="input_Taget">Número de Tarjeta</string>
    <string name="input_Month">Mes</string>
    <string name="input_Year">Año</string>
    <string name="input_cvv">Código CVV</string>

    <string name="nameUser">Kenneth De La Cruz</string>
    <string name="nameProduct">VINO SEMISECO VIÑA D LOS CAMPOS (QUEBRANTA)</string>
    <string name="nameCategory">VINOS SEMISECOS</string>
    <string name="descriptionProduct">750 ML</string>
    <string name="priceProduct">18.00</string>
    <string name="nameDireccion">Casa</string>
    <string name="location">Mz D1 Lt 85</string>
    <string name="contenido">Contieno</string>
    <string name="unidad">La unidad es de S/.</string>
    <string name="numero">Número</string>
    <string name="direccion">Dirección</string>
    <string name="direccionLabel">Av. Garcia Rada 32</string>
    <string name="metododepago">Metodo de Pago</string>
    <string name="metododepagoLabel">Metodo de Pago</string>
    <string name="targeta">4557 8821 9999 4423</string>
    <string name="estadoTarget">Conectado</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
    <string name="StringPrice">S/.</string>
    <string name="PriceOrder">S/.10</string>
    <string name="Sutotal">Sutotal</string>
    <string name="Delivery">Delivery</string>
    <string name="Total">Total</string>
    <string name="Resumen">Resumen del Pedido</string>
    <string name="SeleccionaTargeta">Selecciona una Tarjeta</string>
    <string name="SeleccionaDireccion">Selecciona una dirección</string>
    <string name="Cantidad">1</string>
    <string name="descriptionCerrarSesion">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="txtDireccion">Ingresa una dirección</string>
    <string name="txtMetodoP">Ingresa una tarjeta</string>
    <string name="Discount">30%</string>
    <string name="TitleOffert">Nuevas Ofertas</string>
    <string name="DescriptionOffert">¡Descuento solo válido para hoy!</string>
    <string name="cantidadProducto">4 Productos</string>
    <string name="precioTotal">Precio Total:</string>
    <string name="precioUnitario">Precio Unitario:</string>
    <string name="descriptionP">Descripción:</string>
    <string name="input_Descuento"></string>
    <string name="titleEmoji">Estamos muy tristes por su cancelación</string>
    <string name="descriptionEmoji">Seguiremos mejorando nuestro servicio y satisfaciéndolo en el próximo pedido.</string>


    <!--  PARTE ADMINISTRADOR  -->

    <string name="title_HomeAdmin">¡Bienvenido Administrador!</string>
    <string name="title_CategoyAdmin">Gestión Producto - Categorias</string>
    <string name="title_ProductAdmin">Gestión Producto - Productos</string>
    <string name="title_AddCategoyAdmin">Gestión Producto - Agregar Categoria</string>
    <string name="title_AddProductAdmin">Gestión Producto - Agregar Producto</string>
    <string name="title_EditCategoyAdmin">Gestión Producto - Editar Categoria</string>
    <string name="title_EditProductAdmin">Gestión Producto - Editar Producto</string>
    <string name="title_VentAdmin">Gestión Venta</string>
    <string name="title_VentAdminCliente">Gestión Venta - Cliente</string>
    <string name="title_OfertaAdmin">Gestión Oferta - Ofertas</string>
    <string name="title_OfertaEditAdmin">Gestión Oferta - Editar Oferta</string>
    <string name="title_AddOfertaAdmin">Gestión Oferta - Agregar Oferta</string>


    <string name="btn_Actualizar">Actualizar</string>
    <string name="btn_Eliminar">Eliminar</string>
    <string name="btn_Producto">Gestionar Productos</string>
    <string name="btn_cliente">Gestionar Ventas</string>
    <string name="btn_oferta">Gestionar Ofertas</string>
    <string name="btn_AgrgarCategoria">Agregar Categoría</string>
    <string name="btn_AgrgarProducto">Agregar Nuevo Producto</string>
    <string name="btn_AgrgarOferta">Agregar Oferta</string>

    <string name="input_nameCategory">Nombre Categoría</string>
    <string name="input_urlCategory">Imagen Categoría (URL)</string>
    <string name="input_stock">Stock de Producto</string>
    <string name="input_descriptionOferta">Descriptión de Oferta</string>
    <string name="input_porcentajeOferta">Porcentaje de Oferta</string>

    <string name="email">Kenneth@gmail.com</string>
    <string name="NameCategory">Ingresa el nombre de la categoría</string>
    <string name="NameProduct">Ingresa el nombre del producto</string>
    <string name="NameDescription">Ingresa una descripción para el producto.</string>
    <string name="NamePrice">Ingresa el precio</string>
    <string name="SeleccionCategory">Selecciona una Categoría</string>
    <string name="SeleccionOferta">Selecciona una Oferta (Opcional)</string>
    <string name="Verpedido">Ver pedidos por cliente:</string>
    <string name="PedidoCancelado">Pedidos Cancelados:</string>
    <string name="PedidoPendientes">Pedidos Pendientes:</string>
    <string name="PedidoCompletado">Pedidos Completados:</string>
    <string name="title_Pedido_Cancel">Motivo de cancelación:</string>
    <string name="motivo_cancel">El precio no es razonable</string>


</resources>