<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    tools:context=".Components.ComponentsVacios.OrdenarPedidoVacio">

    <LinearLayout
        android:id="@+id/layoutHead"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="5dp"
        android:background="@color/ColorBaseBoss"
        android:backgroundTint="@color/ColorBaseBoss"
        android:gravity="start|center_vertical|end"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_AtrasOrdenar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/ColorBaseBoss"
            android:contentDescription="@string/btn_Atras"
            android:onClick="Carrito"
            android:rotationY="180"
            android:scaleType="center"
            android:src="@drawable/icon_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/LetraBasePrincipal" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_Home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/title_Ordenar"
                android:textAllCaps="false"
                android:textColor="@color/LetraBasePrincipal"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:tint="@color/LetraBasePrincipal"
            card_view:srcCompat="@drawable/option" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHead">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_home"
            android:textColor="#000000" />

        <LinearLayout
            android:id="@+id/btnAgregarDireccion"
            android:background="@drawable/item_seleccion"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_button"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextDireccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:paddingStart="20dp"
                    android:text="@string/txtDireccion"
                    android:textAlignment="viewStart"
                    android:textColor="@color/LetraBaseSecundario" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@drawable/border_button2"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/locationpng2"
                app:tint="@color/ColorBaseBoss" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/metododepago"
            android:textColor="#000000" />

        <LinearLayout
            android:id="@+id/btnAgregarTargeta"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/item_seleccion"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_button"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textMetodoP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:paddingStart="20dp"
                    android:text="@string/txtMetodoP"
                    android:textAlignment="viewStart"
                    android:textColor="@color/LetraBaseSecundario" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btnMetodoP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@drawable/border_button2"
                android:scaleType="fitCenter"
                android:src="@drawable/edit"
                app:tint="@color/ColorBaseBoss" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_button_normal"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/textSubtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Sutotal"
                android:textColor="@color/ColorNegra" />

            <TextView
                android:id="@+id/textPriceTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PriceOrder"
                android:textAlignment="textEnd"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Delivery"
                android:textColor="@color/ColorNegra" />

            <TextView
                android:id="@+id/txtDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PriceOrder"
                android:textAlignment="viewEnd"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Separacion"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C6C6C6"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Total"
                android:textColor="@color/ColorNegra"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PriceOrder"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/Resumen"
            android:textColor="#000000" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#F7F7F7"
        android:backgroundTint="#F7F7F7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutHead">

            <include
                layout="@layout/list_carrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
